environments/staging/apps/harbor.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: harbor
